--- a/src/main/resources/application-sharding-table.yml
+++ b/src/main/resources/application-sharding-table.yml
@@ -19,8 +19,7 @@ spring:
         #（※）命名需要和表名一致！
         user_base:
           logic-table: user_base
-          #真实数据节点
-          #数据源名+表名组成，以小数点分隔；多个表以逗号分隔；支持inline表达式
+          #真实数据节点，数据源名+表名组成，以小数点分隔；多个表以逗号分隔；支持inline表达式
           actual-data-nodes: ds.user_base_$->{0..1}
           #分表策略
           table-strategy:
