--- a/src/main/resources/application-sharding-table.yml
+++ b/src/main/resources/application-sharding-table.yml
@@ -17,11 +17,12 @@ spring:
       tables:
         #（※）命名需要和表名一致！
         user_base:
+          #1-逻辑表
           logic-table: user_base
-          #真实数据节点
+          #2-实际数据节点
           #数据源名+表名组成，以小数点分隔；多个表以逗号分隔；支持inline表达式
           actual-data-nodes: ds-sharding.user_base_$->{0..1}
-          #分表策略
+          #3-分表策略
           table-strategy:
             #行表达式分片
             inline:
@@ -32,4 +33,5 @@ spring:
         - user_base
     #（★）属性
     props:
-      sql.show: true
+      sql.show: false
+      sql.simple: true
