--- a/src/main/resources/application-sharding-db-table.yml
+++ b/src/main/resources/application-sharding-db-table.yml
@@ -1,11 +1,8 @@
-####################
+#********************
 # 分库分表
-####################
+#********************
 spring:
   shardingsphere:
-    #====================
-    #（▲）数据源
-    #====================
     datasource:
       names: ds0,ds1
       ds0:
@@ -20,22 +17,20 @@ spring:
         url: jdbc:mysql://127.0.0.1:3307/ds_sharding_1
         username: root
         password: root
-    #====================
-    #（▲）分库分表
-    #====================
     sharding:
       tables:
         user_base:
           logic-table: user_base
           actual-data-nodes: ds$->{0..1}.user_base_$->{0..1}
+          #（★）数据库策略
           database-strategy:
             inline:
               sharding-column: ub_user_id
               algorithm-expression: ds$->{ub_user_id % 2}
+          #（★）表策略
           table-strategy:
             inline:
               sharding-column: ub_user_id
               algorithm-expression: user_base_$->{ub_user_id % 2}
-      #绑定表
       binding-tables:
         - user_base
